--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		work correctly both with client-side routing and a non-root public URL.
 		Learn how to configure a non-root public URL by running `npm run build`.
 	  -->
-  <title>Mega City - Admin Panel</title>
+  <title>Nexora HR - Admin Panel</title>
 
   <!-- FUSE Splash Screen CSS -->
   <style>
